--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: sans-serif;
-  background-color: #181617;
+  background: #181617;
+  display: grid;
 }
 
 a {
@@ -11,10 +12,18 @@ label {
   display: block;
 }
 
-nav a {
+nav {
+  height: 80px;
   display: flex;
-  margin: 2em;
+  flex-direction: row;
+  justify-content: space-between;
   justify-content: center;
+}
+
+nav a {
+  align-self: flex-start;
+  z-index: 2;
+  margin: 10px;
 }
 
 form div {
@@ -25,6 +34,8 @@ form div {
 .container {
   padding: 20px;
   position: absolute;
+  margin: auto;
+  overflow: hidden;
   width: 100%;
   display: flex;
   align-items: center;
@@ -44,4 +55,14 @@ form div {
   font-size: 1em;
   font-weight: 900;
   text-shadow: 3px 3px 4px rgb(219, 11, 11);
+}
+
+.mapContainer {
+  display: block;
+  height: 1000px;
+  width: 1200px;
+  border-color: plum;
+  border-radius: 5px;
+  margin-left: 18%;
+  margin-top: 30px;
 }
